--- a/mstyle.css
+++ b/mstyle.css
@@ -22,10 +22,12 @@ th {
 
 body  {
 
-	background-size: 400px 400px;
+	
 	background-color: white;
-	margin: 0px;
-	padding: 0px;
+        background-position: center; /* Center the image */ 
+        background-repeat: no-repeat; /* Do not repeat the image */ 
+        background-size: cover; 
+
 	font-size: 1.25vw; 
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
 	"Roboto", "Oxygen", "Ubuntu",  "Cantarell", Arial, sans-serif;
@@ -88,6 +90,20 @@ img {
 	font-size: 1.25vw;
 	color: black;
 	border-spacing: 0.5vw;
+
+	text-align: left;
+	width: 50%;
+	font-family:  -apple-system, BlinkMacSystemFont,  "Segoe UI",
+	"Roboto", "Oxygen", "Ubuntu",  "Cantarell", Arial, sans-serif;
+}
+
+
+.optb {
+	
+    font-weight: normal;
+	font-size: 1.25vw;
+	color: white;
+	
 
 	text-align: left;
 	width: 50%;
